--- a/index.html
+++ b/index.html
@@ -641,21 +641,12 @@
 
     <!-- Feature Section -->
     <section id="feature">
-<<<<<<< HEAD
-        <div class="container">
-            <div class="feature__header">
-                <h3>Core feature</h3>
-                <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.</p>
-=======
         <div class="container py-5">
             <div class="row justify-content-center py-5 heading__section_mb">
                 <div class="col-md-8 feature__header text-center">
                     <h3 class="text-uppercase">Core feature</h3>
-                    <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
-                        malesuada leo sem quam
-                        pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+                    <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.</p>
                 </div>
->>>>>>> ce36e308e6bf9cfebfb0c5d8db8f1ea4d764ca29
             </div>
             <div class="feature__content">
                 <div class="row">
@@ -665,36 +656,18 @@
                     <div class="col-md-6 feature__right">
                         <div class="feature__item">
                             <h3>01</h3>
-<<<<<<< HEAD
-                            <h4>Mega menu</h4>
+                            <h4 class="text-uppercase">Mega menu</h4>
                             <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente.</p>
                         </div>
                         <div class="feature__item">
                             <h3>02</h3>
-                            <h4>Unlimited portfolio grid</h4>
+                            <h4 class="text-uppercase">Unlimited portfolio grid</h4>
                             <p>Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
                         </div>
                         <div class="feature__item">
                             <h3>03</h3>
-                            <h4>HUGE SHORTCODE</h4>
-                            <p>Augue at maximus Pellentesque eu quam sem, ac malesuada leo sem quam pellente. vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
-=======
-                            <h4 class="text-uppercase">Mega menu</h4>
-                            <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent
-                                sed nisi eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente.</p>
-                        </div>
-                        <div class="feature__item">
-                            <h3>02</h3>
-                            <h4 class="text-uppercase">Unlimited portfolio grid</h4>
-                            <p>Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Fringilla augue at maximus
-                                vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
-                        </div>
-                        <div class="feature__item">
-                            <h3>03</h3>
                             <h4 class="text-uppercase">HUGE SHORTCODE</h4>
-                            <p>Augue at maximus Pellentesque eu quam sem, ac malesuada leo sem quam pellente.
-                                vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
->>>>>>> ce36e308e6bf9cfebfb0c5d8db8f1ea4d764ca29
+                            <p>Augue at maximus Pellentesque eu quam sem, ac malesuada leo sem quam pellente. vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
                         </div>
                         <div class="feature__item">
                             <a href="#" class="btn btn-black mr-md-4">Purchase now</a>
@@ -752,23 +725,14 @@
     <!-- Blog Section -->
     <section id="blog" class="content__padding">
         <div class="container">
-<<<<<<< HEAD
-            <div class="blog__header">
-                <h3>Blog</h3>
-                <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.</p>
-=======
             <div class="row justify-content-center py-5 heading__section_mb">
                 <div class="col-md-8">
                     <div class="blog__header text-center">
 
                         <h3 class="text-uppercase">Blog</h3>
-                        <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
-                            malesuada leo
-                            sem quam
-                            pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+                        <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.</p>
                     </div>
                 </div>
->>>>>>> ce36e308e6bf9cfebfb0c5d8db8f1ea4d764ca29
             </div>
             <div class="blog__content">
                 <div class="row">
@@ -849,8 +813,7 @@
                         <img src="img/event_avatar1.jpg" alt="testimonial1">
                     </div>
                     <div class="item__content">
-                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
-                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc, interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
                         <div class="name">- Kevin Paige -</div>
                         <span>ABC</span>
                     </div>
@@ -860,8 +823,7 @@
                         <img src="img/event_avatar3.jpg" alt="testimonial3">
                     </div>
                     <div class="item__content">
-                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
-                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc, interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
                         <div class="name">- John Doe -</div>
                         <span>head of marketing, TB</span>
 
@@ -872,8 +834,7 @@
                         <img src="img/event_avatar1.jpg" alt="testimonial1">
                     </div>
                     <div class="item__content">
-                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
-                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc, interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
                         <div class="name">- Kevin Paige -</div>
                         <span>ABC</span>
                     </div>
@@ -889,19 +850,14 @@
                 <div class="col-md-8">
                     <div class="video-demo__header text-center">
                         <h3 class="text-uppercase">Watch video demo</h3>
-                        <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
-                            malesuada leo sem quam
-                            pellente. Awesome sliders give you the opportunity to showcase your content.</p>
+                        <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.</p>
                     </div>
                 </div>
             </div>
             <div class="video-demo__content">
                 <div class="row justify-content-center">
                     <div class="col-md-6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/CevxZvSJLk8"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/CevxZvSJLk8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
 
@@ -914,8 +870,7 @@
                     <div class="img-post__content left">
                         <span class="">News</span>
                         <h3 class="">some services that we provide occationaly</h3>
-                        <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo
-                            sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
+                        <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
                         </p>
                     </div>
                 </div>
@@ -924,8 +879,7 @@
                     <div class="img-post__content right">
                         <span class="">News</span>
                         <h3 class="">some services that we provide occationaly</h3>
-                        <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo
-                            sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
+                        <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
                         </p>
                     </div>
                 </div>
@@ -939,9 +893,8 @@
             <div class="row justify-content-center py-5 heading__section_mb">
                 <div class="col-md-8 text-center">
                     <h3 class="text-uppercase">PRICE TABLE</h3>
-                    <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
-                        malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your
-                        content.</p>
+                    <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
+                    </p>
                 </div>
             </div>
 
@@ -1098,8 +1051,7 @@
                 <div class="row justify-content-center py-5 heading__section_mb">
                     <div class="col-8 text-center">
                         <h3 class="text-uppercase">DROP US A LINE</h3>
-                        <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id
-                            quod maxime placeat facere possimus. Nam libero tempore</p>
+                        <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus. Nam libero tempore</p>
                     </div>
 
                 </div>
@@ -1143,12 +1095,12 @@
                 <ul>
                     <li>
                         <a href="">
-                            <i class="fab fa-facebook-f"></i>                        </a>
+                            <i class="fab fa-facebook-f"></i> </a>
                     </li>
                     <li>
                         <a href="">
                             <i class="fab fa-twitter"></i>
-                                                </a>
+                        </a>
                     </li>
                     <li>
                         <a href="">
@@ -1165,7 +1117,7 @@
                             <i class="fab fa-behance"></i>
                         </a>
                     </li>
-                    
+
                 </ul>
             </div>
             <div class="footer__copyright text-center">
