--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li class="nav-item col-12 col-lg-auto"><a class="nav-link" href="#services">Services</a></li>
                     <li class="nav-item col-12 col-lg-auto"><a class="nav-link" href="#feature">Features</a></li>
                     <li class="nav-item col-12 col-lg-auto"><a class="nav-link" href="#blog">Blog</a></li>
-                    <li class="nav-item col-12 col-lg-auto"><a class="nav-link" href="#price-tabe">Price Table</a></li>
+                    <li class="nav-item col-12 col-lg-auto"><a class="nav-link" href="#price-table">Price Table</a></li>
                     <li class="nav-item col-12 col-lg-auto"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -725,7 +725,7 @@
                                 vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
                         </div>
                         <div class="feature__item">
-                            <a href="#" class="btn btn-black mr-4 mb-4 mb-sm-auto">Purchase now</a>
+                            <a href="#" class="btn btn-black mr-4">Purchase now</a>
                             <a href="#" class="btn btn-white">View all</a>
                         </div>
                     </div>
@@ -775,7 +775,7 @@
     </section>
 
     <!-- Blog Section -->
-    <section id="blog" class="content__padding">
+    <section id="blog" class="content__padding pb-0">
         <div class="container">
             <div class="row justify-content-center py-5 heading__section_mb">
                 <div class="col-md-8">
@@ -856,97 +856,98 @@
             </div>
 
         </div>
-    </section>
+        <!-- Testimonial -->
+        <div id="testimonial">
+            <div class="container content__padding">
+                <div class="owl-2 owl-carousel testimonial__content">
+                    <div class="testimonial__item wow animate__animated animate__zoomIn">
+                        <div class="item__img wow animate__animated animate__zoomIn">
+                            <img src="img/event_avatar1.jpg" alt="testimonial1" class="img-fluid">
+                        </div>
+                        <div class="item__content">
+                            <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor
+                                nunc,
+                                interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                            <div class="name">- Kevin Paige -</div>
+                            <span>ABC</span>
+                        </div>
+                    </div>
+                    <div class="testimonial__item wow animate__animated animate__zoomIn">
+                        <div class="item__img">
+                            <img src="img/event_avatar3.jpg" alt="testimonial3" class="img-fluid">
+                        </div>
+                        <div class="item__content">
+                            <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor
+                                nunc,
+                                interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                            <div class="name">- John Doe -</div>
+                            <span>head of marketing, TB</span>
 
-    <!-- Testimonial -->
-    <section id="testimonial">
-        <div class="container content__padding">
-            <div class="owl-2 owl-carousel testimonial__content">
-                <div class="testimonial__item wow animate__animated animate__zoomIn">
-                    <div class="item__img wow animate__animated animate__zoomIn">
-                        <img src="img/event_avatar1.jpg" alt="testimonial1" class="img-fluid">
+                        </div>
                     </div>
-                    <div class="item__content">
-                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
-                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
-                        <div class="name">- Kevin Paige -</div>
-                        <span>ABC</span>
-                    </div>
-                </div>
-                <div class="testimonial__item wow animate__animated animate__zoomIn">
-                    <div class="item__img">
-                        <img src="img/event_avatar3.jpg" alt="testimonial3" class="img-fluid">
-                    </div>
-                    <div class="item__content">
-                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
-                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
-                        <div class="name">- John Doe -</div>
-                        <span>head of marketing, TB</span>
-
-                    </div>
-                </div>
-                <div class="testimonial__item wow animate__animated animate__zoomIn" class="img-fluid">
-                    <div class="item__img">
-                        <img src="img/event_avatar1.jpg" alt="testimonial1">
-                    </div>
-                    <div class="item__content">
-                        <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor nunc,
-                            interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
-                        <div class="name">- Kevin Paige -</div>
-                        <span>ABC</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Video-demo -->
-    <section id="video-demo">
-        <div class="container content__padding">
-            <div class="row justify-content-center py-5 heading__section_mb">
-                <div class="col-md-8">
-                    <div class="video-demo__header text-center">
-                        <h3 class="text-uppercase">Watch video demo</h3>
-                        <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac
-                            malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your
-                            content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="video-demo__content">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <div class="video wow animate__animated animate__zoomIn">
-                            <iframe height="315" src="https://www.youtube.com/embed/CevxZvSJLk8"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                    <div class="testimonial__item wow animate__animated animate__zoomIn" class="img-fluid">
+                        <div class="item__img">
+                            <img src="img/event_avatar1.jpg" alt="testimonial1">
+                        </div>
+                        <div class="item__content">
+                            <p>Nam nec dui dolor. Curabitur in laoreet erat. Nam nec dui dolor. Aliquam varius dolor
+                                nunc,
+                                interdum commodo justoporttitor vitae. Quisque fermentum purus.</p>
+                            <div class="name">- Kevin Paige -</div>
+                            <span>ABC</span>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
-        <div class="img-post container-fluid">
-            <div class="row">
-                <div class="col-lg-6 px-0">
-                    <img src="img/post/p10.jpg" alt="demo1" class="img-fluid">
-                    <div class="img-post__content left">
-                        <span class="">News</span>
-                        <h3 class="">some services that we provide occationaly</h3>
-                        <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo
-                            sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
+        <!-- Video-demo -->
+        <div id="video-demo" class="content__padding">
+            <div class="container">
+                <div class="row justify-content-center py-5 heading__section_mb">
+                    <div class="col-md-8 text-center">
+                        <h3 class="text-uppercase">Watch video demo</h3>
+                        <p class="mt-4">Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem,ac
+                            malesuada leo sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-6 px-0">
-                    <img src="img/post/p11.jpg" alt="demo2" class="img-fluid">
-                    <div class="img-post__content right">
-                        <span class="">News</span>
-                        <h3 class="">some services that we provide occationaly</h3>
-                        <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada leo
-                            sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
-                        </p>
+                <div class="video-demo__content">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-6">
+                            <div class="video wow animate__animated animate__zoomIn">
+                                <iframe height="315" src="https://www.youtube.com/embed/CevxZvSJLk8"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="img-post container-fluid">
+                <div class="row">
+                    <div class="col-lg-6 px-0">
+                        <img src="img/post/p10.jpg" alt="demo1" class="img-fluid">
+                        <div class="img-post__content left">
+                            <span class="">News</span>
+                            <h3 class="">some services that we provide occationaly</h3>
+                            <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada
+                                leo
+                                sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 px-0">
+                        <img src="img/post/p11.jpg" alt="demo2" class="img-fluid">
+                        <div class="img-post__content right">
+                            <span class="">News</span>
+                            <h3 class="">some services that we provide occationaly</h3>
+                            <p>Phasellus fringilla suscipit risus nec eleifend. Pellentesque eu quam sem, ac malesuada
+                                leo
+                                sem quam pellente. Awesome sliders give you the opportunity to showcase your content.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -954,7 +955,7 @@
     </section>
 
     <!-- Price-table Section -->
-    <section id="price-table" class="content__padding">
+    <section id="price-table" class="content__padding pb-0">
         <div class="container">
             <div class="row justify-content-center py-5 heading__section_mb">
                 <div class="col-md-8 text-center">
@@ -965,8 +966,7 @@
                     </p>
                 </div>
             </div>
-
-            <div class="row">
+            <div class="row content__padding pt-0">
                 <div class="col-lg-4">
                     <div class="card wow animate__animated animate__fadeInLeft">
                         <h1>Stater</h1>
@@ -1023,78 +1023,78 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- Purchase -->
-    <section id="purchase" class="content__padding">
-        <div class="container">
-            <div class="row justify-content-center text-center">
-                <div class="col-8">
-                    <div class="header">
-                        <h3>DON’T WANNA PURCHASE NOW? </h3>
-                        <p>subscribe to get in touch </p>
-                    </div>
+        <!-- Purchase -->
+        <div id="purchase" class="content__padding">
+            <div class="container">
+                <div class="row justify-content-center text-center">
+                    <div class="col-8">
+                        <div class="header">
+                            <h3>DON’T WANNA PURCHASE NOW? </h3>
+                            <p>subscribe to get in touch </p>
+                        </div>
 
 
 
-                </div>
-            </div>
-            <div class="row justify-content-center text-center">
-                <div class="col-lg-9">
-                    <div class="purchase__form">
-                        <form action="">
-                            <div class="row">
-
-                                <div class="col-md-9 mb-4">
-                                    <input type="text" placeholder="Enter your email address">
-                                </div>
-                                <div class="col-md-3">
-                                    <button type="button" class="btn btn-black">Subcribe</button>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
-            </div>
-    </section>
+                <div class="row justify-content-center text-center">
+                    <div class="col-lg-9">
+                        <div class="purchase__form">
+                            <form action="">
+                                <div class="row">
 
-    <!-- Client -->
-    <section id="client" class="content__padding">
-        <div class="container">
-            <div class="row justify-content-center py-5 heading__section_mb">
-                <div class="col-8 text-center">
-                    <h3 class="text-uppercase">OUR CLIENTS</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut explicabo iusto quaerat</p>
+                                    <div class="col-md-9 mb-4">
+                                        <input type="text" placeholder="Enter your email address">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <button type="button" class="btn btn-black">Subcribe</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="owl-3 owl-carousel">
-                <div class="client__item">
-                    <img src="img/clients/c-1.png" alt="customer1" class="img-fluid">
+        </div>
+        <!-- Client -->
+        <div id="client" class="content__padding">
+            <div class="container">
+                <div class="row justify-content-center py-5 heading__section_mb">
+                    <div class="col-8 text-center">
+                        <h3 class="text-uppercase">OUR CLIENTS</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut explicabo iusto quaerat</p>
+                    </div>
                 </div>
-                <div class="client__item">
-                    <img src="img/clients/c-2.png" alt="customer1" class="img-fluid">
-                </div>
-                <div class="client__item">
-                    <img src="img/clients/c-3.png" alt="customer1" class="img-fluid">
-                </div>
-                <div class="client__item">
-                    <img src="img/clients/c-4.png" alt="customer1" class="img-fluid">
-                </div>
-                <div class="client__item">
-                    <img src="img/clients/c-5.png" alt="customer1" class="img-fluid">
-                </div>
-                <div class="client__item">
-                    <img src="img/clients/c-6.png" alt="customer1" class="img-fluid">
-                </div>
-                <div class="client__item">
-                    <img src="img/clients/c-7.png" alt="customer1" class="img-fluid">
-                </div>
-                <div class="client__item">
-                    <img src="img/clients/c-8.png" alt="customer1" class="img-fluid">
+                <div class="owl-3 owl-carousel">
+                    <div class="client__item">
+                        <img src="img/clients/c-1.png" alt="customer1" class="img-fluid">
+                    </div>
+                    <div class="client__item">
+                        <img src="img/clients/c-2.png" alt="customer1" class="img-fluid">
+                    </div>
+                    <div class="client__item">
+                        <img src="img/clients/c-3.png" alt="customer1" class="img-fluid">
+                    </div>
+                    <div class="client__item">
+                        <img src="img/clients/c-4.png" alt="customer1" class="img-fluid">
+                    </div>
+                    <div class="client__item">
+                        <img src="img/clients/c-5.png" alt="customer1" class="img-fluid">
+                    </div>
+                    <div class="client__item">
+                        <img src="img/clients/c-6.png" alt="customer1" class="img-fluid">
+                    </div>
+                    <div class="client__item">
+                        <img src="img/clients/c-7.png" alt="customer1" class="img-fluid">
+                    </div>
+                    <div class="client__item">
+                        <img src="img/clients/c-8.png" alt="customer1" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="content__padding">
@@ -1203,11 +1203,11 @@
                                     <i class="fab fa-behance"></i>
                                 </a>
                             </li>
-        
+
                         </ul>
                     </div>
                 </div>
-            </div>     
+            </div>
             <div class="footer__copyright text-center">
                 <h4>© MASSIVE 2014.</h4>
                 <p>BUILDING YOUR SITE WITH LOTS OF FUN</p>
