--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
             <div class="container">
                 <div class="row fun-action__content">
                     <div class="col-lg-4">
-                        <div class="fun-action__item py-3 py-lg-auto">
+                        <div class="fun-action__item justify-content-center justify-content-lg-start py-3 py-lg-auto">
                             <div class="item__icon">
                                 <i class="icon-happy"></i>
                             </div>
@@ -1215,7 +1215,7 @@
         </div>
     </footer>
 
-    <a href="" class="cd-top js-cd-top">
+    <a href="" class="cd-top js-cd-top wow ">
         <i class="fa fa-angle-up"></i>
     </a>
     <!-- Optional JavaScript -->
